--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "superheroes": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
